--- a/C01/w01_Turi Getting Started with SFrames.ipynb
+++ b/C01/w01_Turi Getting Started with SFrames.ipynb
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/people-example.csv</pre>"
+       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv</pre>"
       ],
       "text/plain": [
-       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/people-example.csv"
+       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv"
       ]
      },
      "metadata": {},
@@ -45,10 +45,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 7 lines in 0.017087 secs.</pre>"
+       "<pre>Parsing completed. Parsed 7 lines in 0.016736 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 7 lines in 0.017087 secs."
+       "Parsing completed. Parsed 7 lines in 0.016736 secs."
       ]
      },
      "metadata": {},
@@ -70,10 +70,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/people-example.csv</pre>"
+       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv</pre>"
       ],
       "text/plain": [
-       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/people-example.csv"
+       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv"
       ]
      },
      "metadata": {},
@@ -82,10 +82,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 7 lines in 0.016571 secs.</pre>"
+       "<pre>Parsing completed. Parsed 7 lines in 0.016248 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 7 lines in 0.016571 secs."
+       "Parsing completed. Parsed 7 lines in 0.016248 secs."
       ]
      },
      "metadata": {},
@@ -770,10 +770,7 @@
    "outputs": [],
    "source": [
     "def transform_country(country):\n",
-    "    if country == 'USA':\n",
-    "        return 'United States'\n",
-    "    else:\n",
-    "        return country"
+    "    return 'United States' if country == 'USA' else country"
    ]
   },
   {
@@ -804,7 +801,7 @@
     {
      "data": {
       "text/plain": [
-       "'Brasil'"
+       "'Japan'"
       ]
      },
      "execution_count": 19,
@@ -813,7 +810,7 @@
     }
    ],
    "source": [
-    "transform_country('Brasil')"
+    "transform_country('Japan')"
    ]
   },
   {
@@ -855,6 +852,7 @@
     }
    ],
    "source": [
+    "# using apply (passing it our transform_country function)\n",
     "sf['Country'].apply(transform_country)"
    ]
   },
