--- a/C01/w01/w01_Turi Getting Started with SFrames.ipynb
+++ b/C01/w01/w01_Turi Getting Started with SFrames.ipynb
@@ -33,10 +33,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv</pre>"
+       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/w01/data/people-example.csv</pre>"
       ],
       "text/plain": [
-       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv"
+       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/w01/data/people-example.csv"
       ]
      },
      "metadata": {},
@@ -45,10 +45,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 7 lines in 0.016736 secs.</pre>"
+       "<pre>Parsing completed. Parsed 7 lines in 0.01807 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 7 lines in 0.016736 secs."
+       "Parsing completed. Parsed 7 lines in 0.01807 secs."
       ]
      },
      "metadata": {},
@@ -70,10 +70,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv</pre>"
+       "<pre>Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/w01/data/people-example.csv</pre>"
       ],
       "text/plain": [
-       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/people-example.csv"
+       "Finished parsing file /home/pascal/Projects/ML_DL/Notebooks/ML_UW_Spec/C01/w01/data/people-example.csv"
       ]
      },
      "metadata": {},
@@ -82,10 +82,10 @@
     {
      "data": {
       "text/html": [
-       "<pre>Parsing completed. Parsed 7 lines in 0.016248 secs.</pre>"
+       "<pre>Parsing completed. Parsed 7 lines in 0.016771 secs.</pre>"
       ],
       "text/plain": [
-       "Parsing completed. Parsed 7 lines in 0.016248 secs."
+       "Parsing completed. Parsed 7 lines in 0.016771 secs."
       ]
      },
      "metadata": {},
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "sf = turicreate.SFrame('people-example.csv')"
+    "sf = turicreate.SFrame('./data/people-example.csv')"
    ]
   },
   {
@@ -967,13 +967,6 @@
    "source": [
     "sf"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
