C02/w02: assign1 julia/pluto version

--- a/C02/w02 - Mutlitple Regression/C02w02_nb_pa1.ipynb
+++ b/C02/w02 - Mutlitple Regression/C02w02_nb_pa1.ipynb
@@ -640,10 +640,11 @@
    "metadata": {},
    "source": [
     "Next create the following 4 new features as column in both *test* and *train* data:\n",
-    "* bedrooms_squared = bedrooms \\* bedrooms\n",
-    "* bed_bath_rooms = bedrooms \\* bathrooms\n",
-    "* log_sqft_living = log(sqft_living)\n",
-    "* lat_plus_long = lat + long \n",
+    " * bedrooms_squared = bedrooms \\* bedrooms\n",
+    " * bed_bath_rooms = bedrooms \\* bathrooms\n",
+    " * log_sqft_living = log(sqft_living)\n",
+    " * lat_plus_long = lat + long  \n",
+    "\n",
     "As an example here's the first one:"
    ]
   },
@@ -1895,20 +1896,20 @@
     "    print(f\"model {mname:10s} rss is: {rss_mod:2.7e}\")\n",
     "  return\n",
     "\n",
-    "calc_rss() # fro all models on train set "
+    "calc_rss() # for all models on train set "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quiz Question: Which model (1, 2 or 3) has lowest RSS on TRAINING Data?** Is this what you expected?\n",
+    "**Quiz Question: Which model (1, 2 or 3) has lowest RSS on *training* Data?** Is this what you expected?\n",
     "\n",
     "  - [ ] Model 1\n",
     "  - [ ] Model 2\n",
     "  - [x] Model 3\n",
     "  \n",
-    "  \n",
+    "\n",
     "Yes I would expect this (on training data)"
    ]
   },
@@ -1943,12 +1944,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quiz Question: Which model (1, 2 or 3) has lowest RSS on TESTING Data?** Is this what you expected? Think about the features that were added to each model from the previous.\n",
+    "**Quiz Question: Which model (1, 2 or 3) has lowest RSS on *testing* Data?** Is this what you expected? <br />\n",
+    "Think about the features that were added to each model from the previous.\n",
     "\n",
     "  - [ ] Model 1\n",
     "  - [x] Model 2\n",
     "  - [ ] Model 3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
