C02/w02: assign2 julia/pluto version

--- a/C02/w02 - Mutlitple Regression/C02w02_nb_pa2.ipynb
+++ b/C02/w02 - Mutlitple Regression/C02w02_nb_pa2.ipynb
@@ -105,7 +105,7 @@
     "* A numpy matrix whose columns are the desired features plus a constant column (this is how we create an 'intercept')\n",
     "* A numpy array containing the values of the output\n",
     "\n",
-    "With this in mind, complete the following function (where there's an empty line you should write a line of code that does what the comment above indicates)"
+    "With this in mind, complete the following function:"
    ]
   },
   {
@@ -115,10 +115,9 @@
    "outputs": [],
    "source": [
     "def get_numpy_data(data_sf, features, output):\n",
-    "    data_sf['constant'] = 1.0          # this is how you add a constant column to an SFrame\n",
-    "    features = ['constant', *features] # add the column 'constant' to the front of the features list so that we can extract it...\n",
-    "    # select the columns of data SFrame given by the features list into the SFrame features_sf (now including constant):\n",
-    "    features_sf = data_sf[features]\n",
+    "    data_sf['constant'] = 1.0                # this is how you add a constant column to an SFrame\n",
+    "    features = ['constant', *features]       # add the column 'constant' to the front of the features list so that we can extract it...\n",
+    "    features_sf = data_sf[features]          # select the columns of data SFrame given by the features list (including constant):  \n",
     "    feature_matrix = features_sf.to_numpy()  # convert the features_SFrame into a numpy matrix:\n",
     "    output_sarray = data_sf[output]          # assign the column of data_sf associated with the output to the SArray output_sarray\n",
     "    output_array = output_sarray.to_numpy()  # convert the SArray into a numpy array by first converting it to a list\n",
