C02/w03: assign julia/pluto version

--- a/C02/w03 - Assessing Performance/C02w03_nb_pa.ipynb
+++ b/C02/w03 - Assessing Performance/C02w03_nb_pa.ipynb
@@ -1487,14 +1487,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're going to split the sales data into four subsets of roughly equal size. Then you will estimate a 15th degree polynomial model on all four subsets of the data. Print the coefficients (you should use .print_rows(num_rows = 16) to view all of them) and plot the resulting fit (as we did above). The quiz will ask you some questions about these results.\n",
+    "We are going to split the sales data into four subsets of roughly equal size. Then you will estimate a 15th degree polynomial model on all four subsets of the data. Print the coefficients (you should use .print_rows(num_rows = 16) to view all of them) and plot the resulting fit (as we did above). The quiz will ask you some questions about these results.\n",
     "\n",
     "To split the sales data into four subsets, we perform the following steps:\n",
     "* First split sales into 2 subsets with `.random_split(0.5, seed=0)`. \n",
     "* Next split the resulting subsets into 2 more subsets each. Use `.random_split(0.5, seed=0)`.\n",
     "\n",
     "We set `seed=0` in these steps so that different users get consistent results.\n",
-    "You should end up with 4 subsets (`set1`, `set2`, `set3`, `set4`) of approximately equal size. "
+    "We should end up with 4 subsets (`set1`, `set2`, `set3`, `set4`) of approximately equal size. "
    ]
   },
   {
@@ -1526,7 +1526,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fit a 15th degree polynomial on set_1, set_2, set_3, and set_4 using sqft_living to predict prices. Print the coefficients and make a plot of the resulting model."
+    "Fit a 15th degree polynomial on `set1`, `set2`, `set3`, and `set4` using `sqft_living` to predict prices. <br />\n",
+    "Print the coefficients and make a plot of the resulting model."
    ]
   },
   {
@@ -2031,7 +2032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you have chosen the degree of your polynomial using validation data, compute the RSS of this model on TEST data. Report the RSS on your quiz."
+    "Now that you have chosen the degree of your polynomial using validation data, compute the RSS of this model on *testing* data. Report the RSS on your quiz."
    ]
   },
   {
@@ -2058,7 +2059,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quiz Question: what is the RSS on TEST data for the model with the degree selected from Validation data?**"
+    "**Quiz Question: what is the RSS on *test* data for the model with the degree selected from *validation* data?** <br />\n",
+    "cf. above."
    ]
   },
   {
