--- a/C02/w04 - Ridge Regression/C02w04_nb_pa1.ipynb
+++ b/C02/w04 - Ridge Regression/C02w04_nb_pa1.ipynb
@@ -293,8 +293,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0dc0aa730>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0dc0aa820>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c78045730>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c78045820>]"
       ]
      },
      "execution_count": 11,
@@ -362,8 +362,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0cc056f10>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0cc056f40>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c4c6e5610>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c4c6e5640>]"
       ]
      },
      "execution_count": 13,
@@ -431,8 +431,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0a878a3a0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0a878a3d0>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c4c641d00>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c4c641d30>]"
       ]
      },
      "execution_count": 15,
@@ -500,8 +500,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0a876d2e0>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0a876d310>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c4c624c40>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c4c624c70>]"
       ]
      },
      "execution_count": 17,
@@ -538,8 +538,8 @@
     "***QUIZ QUESTION:  For the models learned in each of these training sets, what are the smallest and largest values you learned for the coefficient of feature `power_1`?***  <br />\n",
     "(For the purpose of answering this question, negative numbers are considered \"smaller\" than positive numbers. So -5 is smaller than -3, and -3 is smaller than 5 and so forth.)\n",
     "\n",
-    "  - smallest: -759.2518668601831 (model_3)\n",
-    "  - largest: 1247.5904037016555 (model_4)"
+    "  - smallest: -759.251 (model_3)\n",
+    "  - largest: 1247.590 (model_4)"
    ]
   },
   {
@@ -603,8 +603,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0a86cd610>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0a86cd640>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c4c584f70>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c4c584fa0>]"
       ]
      },
      "execution_count": 19,
@@ -672,8 +672,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0a86b4340>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0a86b4370>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c4c56bca0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c4c56bcd0>]"
       ]
      },
      "execution_count": 21,
@@ -741,8 +741,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0a8607c10>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0a8607c40>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c4c4cc5b0>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c4c4cc5e0>]"
       ]
      },
      "execution_count": 23,
@@ -810,8 +810,8 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fc0a85ea430>,\n",
-       " <matplotlib.lines.Line2D at 0x7fc0a85ea460>]"
+       "[<matplotlib.lines.Line2D at 0x7f9c4c4a0d90>,\n",
+       " <matplotlib.lines.Line2D at 0x7f9c4c4a0dc0>]"
       ]
      },
      "execution_count": 25,
@@ -981,11 +981,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# validation4 = train_valid_shuffled[5818:7758] \n"
+    "# validation4 = train_valid_shuffled[5818:7758]"
    ]
   },
   {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -1038,14 +1038,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# train4 = train_valid_shuffled[0:5817]\n",
-    "# train4.append(train_valid_shuffled[7759:])"
+    "# train4.append(train_valid_shuffled[7758:])"
    ]
   },
   {
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,13 +1289,6 @@
    "source": [
     " - Final rss: 1.26207e+14\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
