C02/w05 julia/pluto nb2 + jupyter nb2 update

--- a/C02/w05 - Feature Selection & Lasso/C02w05_nb_pa2.ipynb
+++ b/C02/w05 - Feature Selection & Lasso/C02w05_nb_pa2.ipynb
@@ -298,13 +298,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.00e+00, 1.18e+03, 3.00e+00],\n",
+       "       [1.00e+00, 2.57e+03, 3.00e+00],\n",
+       "       [1.00e+00, 7.70e+02, 2.00e+00],\n",
+       "       ...,\n",
+       "       [1.00e+00, 1.02e+03, 2.00e+00],\n",
+       "       [1.00e+00, 1.60e+03, 3.00e+00],\n",
+       "       [1.00e+00, 1.02e+03, 2.00e+00]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "simple_features = ['sqft_living', 'bedrooms']\n",
     "my_output = 'price'\n",
-    "(simple_feature_matrix, output) = get_numpy_data(sales, simple_features, my_output)"
+    "(simple_feature_matrix, output) = get_numpy_data(sales, simple_features, my_output)\n",
+    "simple_feature_matrix"
    ]
   },
   {
@@ -316,11 +334,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00680209, 0.00353021, 0.00583571],\n",
+       "       [0.00680209, 0.00768869, 0.00583571],\n",
+       "       [0.00680209, 0.00230361, 0.00389048],\n",
+       "       ...,\n",
+       "       [0.00680209, 0.00305154, 0.00389048],\n",
+       "       [0.00680209, 0.00478673, 0.00583571],\n",
+       "       [0.00680209, 0.00305154, 0.00389048]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "simple_feature_matrix, norms = normalize_features(simple_feature_matrix)"
+    "simple_feature_matrix, norms = normalize_features(simple_feature_matrix)\n",
+    "simple_feature_matrix"
    ]
   },
   {
@@ -633,8 +669,7 @@
     "  return list(\n",
     "    filter(lambda t: abs(t[1]) <= eps, \n",
     "           zip(['intercept', *features], weights))  # intercept is constant in the quiz\n",
-    "  )\n",
-    "\n"
+    "  )"
    ]
   },
   {
