--- a/C02/w06 - Nearest neighbor & Kernel Regression/C02w06_nb_pa.ipynb
+++ b/C02/w06 - Nearest neighbor & Kernel Regression/C02w06_nb_pa.ipynb
@@ -94,6 +94,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## utility checker for his notebook\n",
+    "\n",
+    "def assert_all(fn, coll, msg=\"\"):\n",
+    "  # all(map(lambda x: x == 0., (results[0] - (features_train[0] - features_test[0]))))\n",
+    "  # all(map(lambda x: abs(x) < eps,  \n",
+    "  #             calc_euclidean_distance(features_train[0:10], qry_house) - dist_10))\n",
+    "  # all(map(lambda x: abs(x) < eps,  \n",
+    "  #             calc_euclidean_distance(features_train[0:10], qry_house) - dist_10))\n",
+    "  # assert all(map(lambda x: 0. <= abs(x) <= 1., row))\n",
+    "  if len(msg)> 0:\n",
+    "    assert all(map(fn, coll)), msg  \n",
+    "  else: \n",
+    "    assert all(map(fn, coll))\n",
+    "  return "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +133,7 @@
        "((5527, 21), (1435, 21))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,13 +216,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def valid_row(row):\n",
     "  assert row.shape[0] == 18\n",
-    "  assert all(map(lambda x: 0. <= abs(x) <= 1., row))\n",
+    "  assert_all(lambda x: 0. <= abs(x) <= 1., \n",
+    "             row, \n",
+    "             msg=\"expecting all absolute values of coeffient to be in [0., 1.]\") \n",
     "  return\n",
     "\n",
     "qry_house = features_test[0] \n",
@@ -216,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -297,7 +321,7 @@
        " 8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -386,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +436,7 @@
        "         1.56530415e-05,  3.72914476e-03,  1.64764925e-03]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,19 +454,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# verify that vectorization works\n",
     "results = features_train[0:3] - features_test[0]\n",
-    "assert all(map(lambda x: x == 0., (results[0] - (features_train[0] - features_test[0]))))\n",
-    "# should print all 0's if results[0] == (features_train[0]-features_test[0])\n",
     "\n",
-    "assert all(map(lambda x: x == 0., (results[1] - (features_train[1] - features_test[0]))))\n",
+    "for ix in range(3):\n",
+    "  assert_all(lambda x: x == 0.,\n",
+    "             results[ix] - (features_train[ix] - features_test[0]),\n",
+    "             msg=\"should be all 0s\")\n",
+    "# should print all 0's if results[ix] == (features_train[ix]-features_test[ix])\n",
     "# should print all 0's if results[1] == (features_train[1]-features_test[0])\n",
-    "\n",
-    "assert all(map(lambda x: x == 0., (results[2] - (features_train[2] - features_test[0]))))\n",
     "# should print all 0's if results[2] == (features_train[2]-features_test[0])"
    ]
   },
@@ -465,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +514,7 @@
        "-0.0934339605841801"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +577,7 @@
        "(5527,)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,13 +626,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# expect calc_euclidean_distance(features_train[0:10], qry_house) == dist_10\n",
-    "assert all(map(lambda x: abs(x) < eps,  \n",
-    "               calc_euclidean_distance(features_train[0:10], qry_house) - dist_10))\n",
+    "assert_all(lambda x: abs(x) < eps,\n",
+    "          calc_euclidean_distance(features_train[0:10], qry_house) - dist_10)\n",
     "\n",
     "assert np.argmin(calc_euclidean_distance(features_train[0:10], qry_house)) == 8"
    ]
@@ -625,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +658,7 @@
        "382"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +682,7 @@
        "(249000, 438000)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,12 +746,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert all(map(lambda x: abs(x) <= eps, \n",
-    "               distance_k_nearest(3, features_train[0:10], qry_house) - np.array([0.05238363, 0.05340274, 0.0546314])))"
+    "assert_all(lambda x: abs(x) < eps,\n",
+    "           distance_k_nearest(3, features_train[0:10], qry_house) - np.array([0.05238363, 0.05340274, 0.0546314]))"
    ]
   },
   {
@@ -741,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +775,7 @@
        " array([0.0028605 , 0.00322584, 0.00350216, 0.00359315]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +837,7 @@
        "413987.5"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +920,7 @@
        "10"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +943,7 @@
        " 350032.0)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1011,7 @@
        "(8, 67361678735491.5)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,16 +1030,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd561f9ed90>]"
+       "[<matplotlib.lines.Line2D at 0x7f044d284130>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1051,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1093,7 @@
        "133118823551516.81"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
