--- a/C02/w06 - Nearest neighbor & Kernel Regression/C02w06_nb_pa.ipynb
+++ b/C02/w06 - Nearest neighbor & Kernel Regression/C02w06_nb_pa.ipynb
@@ -130,7 +130,7 @@
     {
      "data": {
       "text/plain": [
-       "((5527, 21), (1435, 21))"
+       "((5527, 21), (1435, 21), (1741, 21))"
       ]
      },
      "execution_count": 6,
@@ -142,7 +142,7 @@
     "(train_and_validation, test) = sales.random_split(.8, seed=1)        ## initial train/test split\n",
     "(train, validation) = train_and_validation.random_split(.8, seed=1)  ## split training set into training and validation sets\n",
     "\n",
-    "train.shape, validation.shape"
+    "train.shape, validation.shape, test.shape"
    ]
   },
   {
@@ -814,7 +814,7 @@
    "source": [
     "def predict(k:int, feature_matrix, feature_vect, output):\n",
     "  ixes = k_nearest(k, feature_matrix, feature_vect)\n",
-    "  return np.sum(output[ixes] / k)"
+    "  return np.sum(output[ixes]) / k"
    ]
   },
   {
@@ -1036,7 +1036,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f044d284130>]"
+       "[<matplotlib.lines.Line2D at 0x7f16d5381130>]"
       ]
      },
      "execution_count": 40,
@@ -1112,12 +1112,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test ress: 1.3311882e+14\n"
+      "test rss: 1.3311882e+14\n"
      ]
     }
    ],
    "source": [
-    "print(f\"test ress: {test_rss:1.7e}\")"
+    "print(f\"test rss: {test_rss:1.7e}\")"
    ]
   }
  ],
