C02w05 use import for jupyter nb/pa1

--- a/C02/w05 - Feature Selection & Lasso/C02w05_nb_pa1.ipynb
+++ b/C02/w05 - Feature Selection & Lasso/C02w05_nb_pa1.ipynb
@@ -463,11 +463,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_rss(model, data, y):\n",
-    "    preds = model.predict(data)   # First get the predictions\n",
-    "    diff = y - preds              # Then compute the residuals/errors\n",
-    "    rss = (diff * diff).sum()     # Then square and add them up\n",
-    "    return rss"
+    "import sys\n",
+    "sys.path.append(\"../common\")\n",
+    "  \n",
+    "from utils import get_rss"
    ]
   },
   {
