--- a/C03/w02/C03w02_nb_pa1.ipynb
+++ b/C03/w02/C03w02_nb_pa1.ipynb
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
    "source": [
     "**Checkpoint**\n",
     "\n",
-    "Just to make sure you are on the right track, we have provided a few examples. If your `predict_probability` function is implemented correctly, then the outputs will match:"
+    "Just to make sure we are on the right track, we have provided a few examples. If our `predict_probability` function is implemented correctly, then the following should pass:"
    ]
   },
   {
@@ -685,6 +685,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -715,7 +722,7 @@
     "            # Compute the derivative for coeffs[jx]. Save it in a variable called derivative\n",
     "            # YOUR CODE HERE\n",
     "            derivative = feature_derivative(errors, feature_matrix[:, jx])\n",
-    "\n",
+    "            \n",
     "            # add the step size times the derivative to the current coefficient\n",
     "            coeffs[jx] += step_size * derivative        \n",
     "        \n",
@@ -904,6 +911,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25126"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_pos, n_neg = len(preds[preds == 1]), len(preds[preds == -1])\n",
+    "assert n_pos + n_neg == len(scores)\n",
+    "\n",
+    "n_pos"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -920,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +959,7 @@
        "13169"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1072,7 @@
        " 'daughter']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1123,7 @@
        " 'monitor']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
